# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: actions_check.yml  pyci.yml
gendiff/: __init__.py  cli.py  diff.py  generate_diff.py  generated_diff.py  parser.py  tree.py
gendiff/formats/: formatter.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: gendiff_test.py
tests/fixtures/: json_result.txt
